--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My-personal-website</title>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>My Personal Website</title>
+  </head>
+  <body>
     <h1>Ryann Elizabeths Personal Website</h1>
-</body>
+  </body>
 </html>
